--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -7,7 +7,7 @@ app:
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
   # KLP Buid ID
-  version: ""
+  version: "d106bee1-5af9-4c53-8276-21f5e4f96ac7"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
